Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12218

ASSERTION( mbits == (req->rq_mbits & PTLRPC_BULK_OPS_MASK) ) failes if OBD_CONNECT_BULK_MBITS isn't used.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.13.0
    • None
    • None
    • 3
    • 9223372036854775807

      > 2019-03-15T05:57:34.982434-05:00 c0-0c2s11n1 memfill3 invoked oom-killer: gfp_mask=0x14280ca(GFP_HIGHUSER_MOVABLE|__GFP_ZERO), nodemask=(null), order=0, oom_score_adj=0
      > 2019-03-15T05:57:34.982440-05:00 c0-0c2s11n1 LNetError: 8294:0:(lib-lnet.h:236:lnet_md_alloc()) LNET: 295539320 total bytes allocated by lnet
      > 2019-03-15T05:57:34.982480-05:00 c0-0c2s11n1 memfill3 cpuset=1824551 mems_allowed=0-1
      > 2019-03-15T05:57:34.982492-05:00 c0-0c2s11n1 LustreError: 8294:0:(niobuf.c:398:ptlrpc_register_bulk()) snx11242-OST0000-osc-ffff880f8a142800: LNetMDAttach failed x1628044403952257/1: rc = -12
      > 2019-03-15T05:57:34.982497-05:00 c0-0c2s11n1 Out of memory: Kill process 53231 (atpBackend) score 1000 or sacrifice child
      ....
      > 2019-03-15T05:57:34.982801-05:00 c0-0c2s11n1 LustreError: 8294:0:(niobuf.c:358:ptlrpc_register_bulk()) ASSERTION( mbits == (req->rq_mbits & PTLRPC_BULK_OPS_MASK) ) failed: first mbits = x1628044403952259, last mbits = x1628044403952262
      > 2019-03-15T05:57:34.982812-05:00 c0-0c2s11n1 LustreError: 8294:0:(niobuf.c:358:ptlrpc_register_bulk()) LBUG
      > 2019-03-15T05:57:34.982824-05:00 c0-0c2s11n1 CPU: 79 PID: 8294 Comm: ptlrpcd_01_23 Tainted: P W O 4.12.14-25.22_5.0.69-cray_ari_c #1 SLE15 (unreleased)
      > 2019-03-15T05:57:34.982832-05:00 c0-0c2s11n1 Hardware name: Cray Inc. Cascade/Cascade, BIOS 5.11 03/22/2018
      > 2019-03-15T05:57:34.982839-05:00 c0-0c2s11n1 Call Trace:
      > 2019-03-15T05:57:34.982848-05:00 c0-0c2s11n1 dump_stack+0x70/0xa1
      > 2019-03-15T05:57:34.982855-05:00 c0-0c2s11n1 libcfs_call_trace+0x6d/0x70 [libcfs]
      > 2019-03-15T05:57:34.982860-05:00 c0-0c2s11n1 lbug_with_loc+0x43/0xa0 [libcfs]
      > 2019-03-15T05:57:34.982867-05:00 c0-0c2s11n1 ptlrpc_register_bulk+0x8cf/0xa30 [ptlrpc]

            askulysh Andriy Skulysh
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: